# list

./: .isort.cfg  README.md  badge.json  badge_CN.json  soblist.json
schema/: .pre-commit-config.yaml  pyproject.toml
schema/scripts/: setup_dev.sh
schema/soblischema/models/: sob.py
