[tool.poetry]
name = "soblischema"
version = "0.1.0"
description = "JSON schema collection of soblist."
authors = ["soblist.org"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pre-commit = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "prod"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.black]
line-length = 79

[settings]
known_third_party = [
  "aiokafka",
  "chanconfig",
  "docopt",
  "jsonschema",
  "mock",
  "mock_logger",
  "nest_asyncio",
  "nose",
  "redis",
  "sphinx_rtd_theme"
]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
